# TRM

./: .gitignore  README.md  pretrain.py  pyproject.toml
src/tinyrecursivemodels/: main.py
