[project]
name = "tiny-recursive-models"
version = "1.0.0"
description = "Tiny Recursive Models"
requires-python = ">=3.12"
dependencies = [
    "argdantic>=1.3.3",
    "coolname>=3.0.0",
    "einops>=0.8.2",
    "huggingface-hub>=1.3.5",
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.8",
    "ninja>=1.13.0",
    "omegaconf>=2.3.0",
    "packaging>=26.0",
    "pydantic>=2.12.5",
    "pydantic-core>=2.41.5",
    "setuptools>=80.10.2",
    "setuptools-scm>=9.2.2",
    "tiktoken>=0.12.0",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.2",
    "transformers>=5.0.0",
    "wandb>=0.24.1",
    "wheel>=0.46.3",
    "adam-atan2-pytorch",
    "pyyaml>=6.0.3",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
